Changes in version 0.2.0.18-alpha - 2008-01-??
  o Major features:
    - Avoid going directly to the directory authorities even if you're a
      relay, if you haven't found yourself reachable yet or if you've
      decided not to advertise your dirport yet. Addresses bug 556.

  o Minor features:
    - Don't answer "/tor/networkstatus-bridges" directory requests if
      the request isn't encrypted.


Changes in version 0.2.0.17-alpha - 2008-01-17
  o Compile fixes:
    - Make the tor-gencert man page get included correctly in the tarball.


Changes in version 0.2.0.16-alpha - 2008-01-17
  o New directory authorities:
    - Set up gabelmoo (run by Karsten Loesing) as the fifth v3 directory
      authority.

  o Major performance improvements:
    - Switch our old ring buffer implementation for one more like that
      used by free Unix kernels. The wasted space in a buffer with 1mb
      of data will now be more like 8k than 1mb. The new implementation
      also avoids realloc();realloc(); patterns that can contribute to
      memory fragmentation.

  o Minor features:
    - Configuration files now accept C-style strings as values. This
      helps encode characters not allowed in the current configuration
      file format, such as newline or #. Addresses bug 557.
    - Although we fixed bug 539 (where servers would send HTTP status 503
      responses _and_ send a body too), there are still servers out
      there that haven't upgraded. Therefore, make clients parse such
      bodies when they receive them.
    - When we're not serving v2 directory information, there is no reason
      to actually keep any around.  Remove the obsolete files and directory
      on startup if they are very old and we aren't going to serve them.

  o Minor performance improvements:
    - Reference-count and share copies of address policy entries; only 5%
      of them were actually distinct.
    - Never walk through the list of logs if we know that no log is